--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <header id="header">
             <h1 id="page-title">Ontwerp 3 - Git-flow</h1>
-            <p id="naam">Alex</p>
+            <p id="naam">Alex2</p>
             <p id="version">Versie: 2.2</p>
         </header>
 
