--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
         <header id="header">
             <h1 id="page-title">Ontwerp 3 - Git-flow</h1>
-            <p id="naam">Alex2</p>
+            <p id="naam">Alex</p>
             <p id="version">Versie: 2.2</p>
         </header>
 
         <main id="main">
             <section id="intro">
                 <h1>Ontwerp 4 - Oefentoets</h1>
-            </section>
+       </section>
 
 
             <article id="introductie">
